[package]
name = "contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.1.0"
near-contract-standards = "5.1.0"
near-sys = "0.2.1"

[dev-dependencies]
near-workspaces = "0.10.0"
tokio = { version = "1.33.0", features = ["full"] }
